--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -43,5 +43,7 @@ if [ -f "${OPENSHIFT_REPO_DIR}"/package.json ]; then
     (cd "${OPENSHIFT_REPO_DIR}/programs/server";export TMPDIR="tmp"; npm install bcrypt -d --cache ${OPENSHIFT_DATA_DIR})
     (cd "${OPENSHIFT_REPO_DIR}/programs/server/npm/sacha:juice/node_modules"; rm -rf juice; rm -rf .bin)
     (cd "${OPENSHIFT_REPO_DIR}/programs/server";export TMPDIR="tmp"; npm install juice -d --cache ${OPENSHIFT_DATA_DIR})
+    (cd "${OPENSHIFT_REPO_DIR}/programs/server/npm/npm-bcrypt/node_modules"; rm -rf express)
+    (cd "${OPENSHIFT_REPO_DIR}/programs/server";export TMPDIR="tmp"; npm install express -d --cache ${OPENSHIFT_DATA_DIR})
 fi
        
